force-app/main/default/objects/ffr__SummarizationSettings__c/ffr__SummarizationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>ERP Batch Settings</description>
    <label>Batch Settings (ERP)</label>
</CustomObject>