force-app/main/default/objects/ffr__SummarizationSettings__c/fields/ffr__Email__c.field-meta.xml
<CustomField>
    <fullName>ffr__Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>