force-app/main/default/objects/ffr__SummarizationSettings__c/fields/ffr__MaximumQueueSize__c.field-meta.xml
<CustomField>
    <fullName>ffr__MaximumQueueSize__c</fullName>
    <label>Batch System Maximum Queue Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>