force-app/main/default/objects/ffr__SummarizationSettings__c/fields/ffr__NotificationObjectRecipients__c.field-meta.xml
<CustomField>
    <fullName>ffr__NotificationObjectRecipients__c</fullName>
    <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
    <label>Notification on objects</label>
    <type>TextArea</type>
</CustomField>