force-app/main/default/objects/ffr__SummarizationSettings__c/fields/ffr__Task__c.field-meta.xml
<CustomField>
    <fullName>ffr__Task__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Task Notification</label>
    <type>Checkbox</type>
</CustomField>